--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vuetododemo1",
   "version": "1.0.0",
   "description": "A Vue And TypeScript ToDo Demo Project",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,17 @@
   },
   "homepage": "https://github.com/banxi1988/VueToDoDemo#readme",
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-class-component": "^6.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "ts-loader": "^4.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "vue-loader": "^14.2.2",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14"
   }
 }
