--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/banxi1988/VueToDoDemo#readme",
   "dependencies": {
     "vue": "^2.5.16",
-    "vue-class-component": "^6.2.0"
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^6.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -32,6 +33,7 @@
     "ts-loader": "^4.2.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "vue-loader": "^14.2.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   }
