--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.11",
     "ts-loader": "^4.2.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "vue-loader": "^14.2.2",
