--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Vue And TypeScript ToDo Demo Project",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --watch --config webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
