feat 增加 webpack.config.prod.js 配置，修正 Vue 警告及编译错误

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --watch --config webpack.config.dev.js"
+    "dev": "webpack --watch --config webpack.config.dev.js",
+    "beta": "webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
